Bug 1424368: Use an enum value for invalid WasmToken::Kind; r=luke

MozReview-Commit-ID: 8zfpuEMkzLU