js/src/wasm/WasmTextToBinary.cpp
@@ -135,7 +135,8 @@ class WasmToken
         UnsignedInteger,
         ValueType,
         Wait,
-        Wake
+        Wake,
+        Invalid
     };
   private:
     Kind kind_;
@@ -153,7 +154,7 @@ class WasmToken
     } u;
   public:
     WasmToken()
-      : kind_(Kind(-1)),
+      : kind_(Kind::Invalid),
         begin_(nullptr),
         end_(nullptr),
         u()
@@ -164,6 +165,7 @@ class WasmToken
         end_(end)
     {
         MOZ_ASSERT(kind_ != Error);
+        MOZ_ASSERT(kind_ != Invalid);
         MOZ_ASSERT((kind == EndOfFile) == (begin == end));
     }
     explicit WasmToken(uint32_t index, const char16_t* begin, const char16_t* end)
@@ -246,7 +248,7 @@ class WasmToken
         end_(begin)
     {}
     Kind kind() const {
-        MOZ_ASSERT(kind_ != Kind(-1));
+        MOZ_ASSERT(kind_ != Kind::Invalid);
         return kind_;
     }
     const char16_t* begin() const {
@@ -377,6 +379,8 @@ class WasmToken
           case UnsignedInteger:
           case ValueType:
             return false;
+          case Invalid:
+            break;
         }
         MOZ_CRASH("unexpected token kind");
     }
